# sundt-edm-databricks

./: .env.example  .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  pr-checks.yml
config/: sources.template.yaml  sources.yaml
databricks/: databricks.yml
databricks/resources/: resources.jobs.yml
databricks/resources/notebooks/maturity/: maturity_collector_notebook.py  scorecard_evaluation_notebook.py  scorecard_status_loader_notebook.py
databricks/resources/notebooks/quality/: quality_scorecard_bootstrap_notebook.py  (+1 more)
databricks/resources/scorecard/: databricks-environment-scorecard.csv
docs/: branch-protection-checklist.md  cost_control_metrics.md  databricks-asset-bundles-lifecycle.md  databricks-environment-scorecard.md  databricks-scorecard-runbook.md  metric_areas.md  promotion-runbook.md  warehouse-maturity-model.md  workflow-validation-runbook.md
scorecard/scorecard/definitions/: critical_datasets.template.json  critical_datasets.template.yaml  metrics.json  metrics.yaml
scorecard/scorecard/pyspark/: bootstrap_scorecard_objects.py
scorecard/scorecard/sql/: 10_stg_bigeye.sql  11_stg_alation.sql  12_sliver_definitions.sql
src/sundt_edm_quality/: __init__.py  cli.py  config.py  databricks_bootstrap.py  pipeline.py  reporting.py  scorecard.py
src/sundt_edm_quality.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sundt_edm_quality/clients/: alation.py  bigeye.py  databricks.py
tests/unit/: test_reporting.py  test_scorecard_embedded.py
(+6 files in other folders)
